--- a/modules/administration-guide/pages/managing-ide-extensions.adoc
+++ b/modules/administration-guide/pages/managing-ide-extensions.adoc
@@ -7,7 +7,6 @@
 [id="managing-ide-extensions"]
 = Managing IDE extensions
 
-IDEs use extensions or plugins to extend their functionality; however, the mechanism for adding extensions differs between editors. 
-This section describes how to manage extensions for editors in {prod-short}.
+IDEs use extensions or plugins to extend their functionality, and the mechanism for managing extensions differs between IDEs.
 
 * xref:extensions-for-microsoft-visual-studio-code-open-source.adoc[]
