--- a/modules/administration-guide/partials/proc_manually-selecting-an-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_manually-selecting-an-open-vsx-registry-instance.adoc
@@ -3,7 +3,7 @@
 [id="manually-selecting-an-open-vsx-registry-instance"]
 = Manually selecting an Open VSX registry instance
 
-If the default Open VSX registry instance is not what you need, you can manually select another Open VSX registry instance:
+If the default Open VSX registry instance is not what you need, you can select another Open VSX registry instance:
 
 .Procedure
 
