--- a/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
+++ b/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
@@ -11,7 +11,7 @@ To manage extensions for link:https://github.com/microsoft/vscode[Microsoft Visu
 
 * Public link:https://open-vsx.org[open-vsx.org].
 * The embedded, locally cached instance of the Open VSX registry that runs in the `plugin-registry` pod of {prod-short} to support air-gapped, offline, and proxy-restricted environments, containing only a subset of the extensions published on link:https://open-vsx.org[open-vsx.org].
-* Your own custom build of the embedded Open VSX registry for use in workspaces of your organization's {prod-short}.
+* Your own custom build of the embedded Open VSX registry, for use in your organization's workspaces.
 
 The Open VSX registry instance default differs depending on how proxies or DNS are configued: If {prod-short} resolves `pass:c,a,q[https://open-vsx.org]`, then the default is link:https://open-vsx.org[open-vsx.org]. If not, then the default is the embedded, locally cached Open VSX registry instance within the `plugin-registry` pod of {prod-short}.
 
