--- a/modules/administration-guide/partials/proc_manually-selecting-an-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_manually-selecting-an-open-vsx-registry-instance.adoc
@@ -23,5 +23,5 @@ spec:
  
 * You can manually select the embedded Open VSX registry instance in the `plugin-registry` pod by setting an empty string, `''` or `""`, as an `openVSXURL` value.
 
-* You can point `openVSXURL` to the URL of your custom build of the embedded Open VSX registry, which is explained in the next section.
+* You can point `openVSXURL` at the URL of your customized Open VSX registry. See the next section for how to configure and build it.
 ====
