fix: attribute in navtitle

--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -1,7 +1,7 @@
 :_content-type: PROCEDURE
 :description: Calculating {prod-short} resource requirements
 :keywords: administration-guide, calculating-che-resource-requirements
-:navtitle: Calculating Che resource requirements
+:navtitle: Calculating {prod-short} resource requirements
 :page-aliases: .:calculating-che-resource-requirements.adoc
 
 
