fix: attribute in nevtitle and description

--- a/modules/administration-guide/pages/uninstalling-che.adoc
+++ b/modules/administration-guide/pages/uninstalling-che.adoc
@@ -1,7 +1,7 @@
 :_content-type: PROCEDURE
-:description: Uninstalling Che
+:description: Uninstalling {prod-short}
 :keywords: administration guide, uninstalling-che
-:navtitle: Uninstalling Che
+:navtitle: Uninstalling {prod-short}
 :page-aliases: installation-guide:uninstalling-che.adoc, installation-guide:uninstalling-che-after-operatorhub-installation.adoc, uninstalling-che-on-openshift.adoc, installation-guide:uninstalling-che-after-chectl-installation.adoc, uninstalling-che-by-using-chectl.adoc
 
 
