fix: more attributes replacement

--- a/modules/administration-guide/pages/collecting-logs-using-chectl.adoc
+++ b/modules/administration-guide/pages/collecting-logs-using-chectl.adoc
@@ -12,7 +12,10 @@ An installation of {prod} consists of several containers running in the {orch-na
 Following commands are available to collect {prod} logs from the {orch-name} cluster using the `{prod-cli}` tool:
 
 `{prod-cli} server:logs`:: 
-Collects existing {prod} server logs and stores them in a directory on the local machine. By default, logs are downloaded to a temporary directory on the machine. However, this can be overwritten by specifying the `-d` parameter. For example, to download Che logs to the `/home/user/che-logs/` directory, use the command
+Collects existing {prod} server logs and stores them in a directory on the local machine.
+By default, logs are downloaded to a temporary directory on the machine.
+However, this can be overwritten by specifying the `-d` parameter.
+For example, to download {prod-short}:wq:q logs to the `/home/user/che-logs/` directory, use the command
 +
 [source,shell,subs="+attributes"]
 ----
