--- a/modules/end-user-guide/partials/proc_using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/partials/proc_using-a-git-provider-access-token.adoc
@@ -49,7 +49,7 @@ data:
 type: Opaque
 ----
 +
-<1> Your Che user ID. You can retrieve `__<che_endpoint>__/api/user` to get the Che user data.
+<1> Your {prod-short} user ID. You can retrieve `__<che_endpoint>__/api/user` to get the {prod-short} user data.
 <2> The Git provider name: `github` or `gitlab` or `bitbucket-server`.
 <3> The Git provider URL.
 <4> Your Git provider user ID, follow the API documentation to retrieve the user object:
