--- a/modules/glossary/pages/che-glossary.adoc
+++ b/modules/glossary/pages/che-glossary.adoc
@@ -1,6 +1,6 @@
 [id="che-glossary"]
-// = Che glossary
-:navtitle: Che glossary
+// = {prod-short} glossary
+:navtitle: {prod-short} glossary
 :keywords: overview, che-glossary
 :page-aliases: .:che-glossary, overview:che-glossary
 
