--- a/modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -5,7 +5,9 @@
 
 You can add or remove your choice of pass:[<!-- vale RedHat.Spelling = NO -->] pass:[<!-- vale RedHat.Spelling = NO -->] VS Code pass:[<!-- vale RedHat.Spelling = YES -->] pass:[<!-- vale RedHat.Spelling = YES -->] extensions in the embedded Open VSX registry instance that is cached by {prod-short} to support air-gapped, offline, and proxy-restricted environments.
 
-This will create a custom build of the Open VSX registry, which can be used in your organization’s workspaces.
+This will create a custom build of the Open VSX registry, which can be used in your organization’s workspaces. 
+
+Note that after a subscription update, your CheCluster will revert to default settings and any changes will need to be reapplied. 
 
 .Procedure
 
