--- a/modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -31,7 +31,7 @@ The latest extension version on link:https://open-vsx.org[open-vsx.org] is the d
 +
 [TIP]
 ====
-If the extension author is not cooperative, you can add the extension directly from the `.vsix` file:
+If the extension author is not cooperative, you can add the extension directly from the `.vsix` file, as long as the license and terms of use allow it, and the file can be accessed from a https:// URL while building the plugin registry container.
 
 [source,json,subs="+quotes"]
 ----
