--- a/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
+++ b/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
@@ -13,7 +13,7 @@ To manage extensions for link:https://github.com/microsoft/vscode[Microsoft Visu
 * The embedded, locally cached instance of the Open VSX registry that runs in the `plugin-registry` pod of {prod-short} to support air-gapped, offline, and proxy-restricted environments, containing only a subset of the extensions published on link:https://open-vsx.org[open-vsx.org].
 * Your own custom build of the embedded Open VSX registry, for use in your organization's workspaces.
 
-The Open VSX registry instance default differs depending on how proxies or DNS are configued: If {prod-short} resolves `pass:c,a,q[https://open-vsx.org]`, then the default is link:https://open-vsx.org[open-vsx.org]. If not, then the default is the embedded, locally cached Open VSX registry instance within the `plugin-registry` pod of {prod-short}.
+If it can be resolved from within your cluster, the default Open VSX registry at `pass:c,a,q[https://open-vsx.org]` will be used; if not, default is the embedded, locally cached Open VSX registry within the {prod-short} `plugin-registry` pod.
 
 include::partial$proc_manually-selecting-an-open-vsx-registry-instance.adoc[leveloffset=+1]
 
