--- a/modules/administration-guide/partials/proc_manually-selecting-an-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_manually-selecting-an-open-vsx-registry-instance.adoc
@@ -21,7 +21,7 @@ spec:
 ====
 * The default `openVSXURL` value is `pass:c,a,q[https://open-vsx.org]`.
  
-* You can manually select the embedded Open VSX registry instance in the `plugin-registry` pod by setting an empty string, `''` or `""`, as an `openVSXURL` value.
+* To select the embedded Open VSX registry instance in the `plugin-registry` pod, use `openVSXURL: ''`.
 
 * You can point `openVSXURL` at the URL of your customized Open VSX registry. See the next section for how to configure and build it.
 ====
