edits in response to SME feedback

--- a/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
+++ b/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
@@ -10,11 +10,9 @@
 To manage extensions for link:https://github.com/microsoft/vscode[Microsoft Visual Studio Code - Open Source IDE], {prod-short} uses one of these link:https://open-vsx.org/about[Open VSX] registries:
 
 * The public, primary link:https://open-vsx.org[open-vsx.org] registry.
-* The embedded, locally cached instance of the Open VSX registry that runs in the `plugin-registry` pod of {prod-short} to support air-gapped, offline, and proxy-restricted environments, containing only a subset of the extensions published on link:https://open-vsx.org[open-vsx.org].
-* Your own custom build of the embedded Open VSX registry, for use in your organization's workspaces.
+* The embedded, locally cached instance of the Open VSX registry that runs in the `plugin-registry` pod of {prod-short} to support air-gapped, offline, and proxy-restricted environments. The embedded Open VSX registry contains only a subset of the extensions published on link:https://open-vsx.org[open-vsx.org].
+* Your own custom build of the embedded Open VSX registry for use in your organization's workspaces.
 
-If it can be resolved from within your cluster, the default Open VSX registry at `pass:c,a,q[https://open-vsx.org]` will be used; if not, default is the embedded, locally cached Open VSX registry within the {prod-short} `plugin-registry` pod.
-
-include::partial$proc_manually-selecting-an-open-vsx-registry-instance.adoc[leveloffset=+1]
+include::partial$proc_selecting-an-open-vsx-registry-instance.adoc[leveloffset=+1]
 
 include::partial$proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc[leveloffset=+1]
