--- a/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
@@ -1,7 +1,9 @@
 :_content-type: CONCEPT
 
-[id="manually-selecting-an-open-vsx-registry-instance"]
-= Manually selecting an Open VSX registry instance
+[id="selecting-an-open-vsx-registry-instance"]
+= Selecting an Open VSX registry instance
+
+The Open VSX registry at `pass:c,a,q[https://open-vsx.org]` is the default if it is resolved from within your cluster. If not, then the embedded Open VSX registry within the {prod-short} `plugin-registry` pod is the default.
 
 If the default Open VSX registry instance is not what you need, you can select another Open VSX registry instance:
 
