--- a/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-a-file-into-a-container.adoc
+++ b/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-a-file-into-a-container.adoc
@@ -51,7 +51,7 @@ metadata:
 ----
 ====
 
-The {orch-name} object may contain several items whose names must match the desired file name mounted into the container.
+The {orch-name} object can contain several items whose names must match the desired file name mounted into the container.
 
 .Example:
 ====
