--- a/modules/end-user-guide/pages/requesting-persistent-storage-for-workspaces.adoc
+++ b/modules/end-user-guide/pages/requesting-persistent-storage-for-workspaces.adoc
@@ -19,7 +19,7 @@ Persistent Volumes come at a cost: attaching a persistent volume slows workspace
 
 [WARNING]
 ====
-Starting another, concurrently running workspace with a link:https://kubernetes.io/docs/concepts/storage/persistent-volumes/#access-modes[`ReadWriteOnce` PV] may fail.
+Starting another, concurrently running workspace with a link:https://kubernetes.io/docs/concepts/storage/persistent-volumes/#access-modes[`ReadWriteOnce` PV] might fail.
 ====
 
 .Additional resources
