--- a/modules/administration-guide/pages/configuring-workspaces-nodeselector.adoc
+++ b/modules/administration-guide/pages/configuring-workspaces-nodeselector.adoc
@@ -11,7 +11,7 @@ This section describes how to configure link:https://kubernetes.io/docs/concepts
 
 .Procedure
 
-{prod-short} uses the `CHE_WORKSPACE_POD_NODE__SELECTOR` environment variable to configure `nodeSelector`. This variable may contain a set of comma-separated `key=value` pairs to form the nodeSelector rule, or `NULL` to disable it.
+{prod-short} uses the `CHE_WORKSPACE_POD_NODE__SELECTOR` environment variable to configure `nodeSelector`. This variable can contain a set of comma-separated `key=value` pairs to form the nodeSelector rule, or `NULL` to disable it.
 
 ----
 CHE_WORKSPACE_POD_NODE__SELECTOR=disktype=ssd,cpu=xlarge,[key=value]
