--- a/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
@@ -13,7 +13,7 @@ Mounting your access token as a Secret enables the {prod-short} Server to access
 
 Apply the Secret in your user {orch-namespace} of the {orch-name} cluster of your organization's {prod-short} instance.
 
-After you have applied the Secret, you can create new workspaces from a private GitHub, GitLab, or Bitbucket-server repository.
+After applying the Secret, you can create new workspaces from a private GitHub, GitLab, or Bitbucket-server repository.
 
 You can create and apply multiple access-token Secrets per a Git provider. You must apply each of those Secrets in your user {orch-namespace}.
 
