--- a/modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc
+++ b/modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc
@@ -13,7 +13,7 @@ User authentication to a Git server from a workspace is configured by the admini
 
 * Your administrator sets up an xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth application on GitHub, GitLab, or Bitbucket] for your organization's {prod} instance.
 
-* As a workaround, users create and apply their own {kubernetes} Secrets for their personal xref:using-a-git-provider-access-token.adoc[Git-provider access tokens].
+* As a workaround, some users create and apply their own {kubernetes} Secrets for their personal xref:using-a-git-provider-access-token.adoc[Git-provider access tokens].
 
 .Additional resources
 * xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[Administration Guide: OAuth for GitHub, GitLab, or Bitbucket]
