--- a/modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -7,7 +7,7 @@ You can add or remove your choice of pass:[<!-- vale RedHat.Spelling = NO -->] p
 
 This will create a custom build of the Open VSX registry, which can be used in your organization’s workspaces. 
 
-NOTE: A subscription update reverts your `CheCluster` to default settings, and you must reapply your changes to `CheCluster`. 
+WARNING: Subscription updates for the {prod-short} Operator revert any customizations of the `CheCluster` custom resource to the published settings for the updated operator. After the update is complete, you must reapply your changes to the `CheCluster` custom resource. You may also choose to build a new registry container based on the updated {prod-short} container, in order to get the latest security fixes and updates.
 
 .Procedure
 
