--- a/modules/administration-guide/examples/snip_che-steps-to-add-or-remove-extensions-in-openvsx-sync-json.adoc
+++ b/modules/administration-guide/examples/snip_che-steps-to-add-or-remove-extensions-in-openvsx-sync-json.adoc
@@ -1,3 +1,3 @@
-. Fork, clone, or download the link:https://github.com/eclipse-che/che-plugin-registry[plugin registry repository].
+. Fork and clone, or download the link:https://github.com/eclipse-che/che-plugin-registry[plugin registry repository].
 
 . For each extension that you need to add or remove, edit link:https://github.com/eclipse-che/che-plugin-registry/blob/main/openvsx-sync.json[the `openvsx-sync.json` file]:
