--- a/modules/end-user-guide/pages/url-parameter-for-configuring-project-remotes.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-configuring-project-remotes.adoc
@@ -11,7 +11,7 @@ When you visit a URL for starting a new workspace, one Git remote will be config
 
 To have {prod-short} automatically configure Git remotes on workspace creation, the `remotes=<remotes>` URL parameter can be used.
 
-The first remote specified in the `remotes` parameter will have it's default branch checked out on workspace startup.
+The first remote specified in the `remotes` parameter will have its default branch checked out on workspace startup.
 
 The value of the `remotes` parameter can be provided in two formats: by providing both remote names and URLs, and by providing only URLs.
 
