--- a/modules/end-user-guide/pages/url-parameter-for-configuring-project-remotes.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-configuring-project-remotes.adoc
@@ -13,7 +13,7 @@ To have {prod-short} automatically configure Git remotes on workspace creation, 
 
 The first remote specified in the `remotes` parameter will have its default branch checked out on workspace startup.
 
-The value of the `remotes` parameter can be provided in two formats: by providing both remote names and URLs, and by providing only URLs.
+The value of the `remotes` parameter can be provided in two formats: by providing both remote names and URLs, or by providing only URLs.
 
 == Providing remote names and URLs
 
