procedures: update admin page on configuring storage classes
Signed-off-by: Andrew Obuchowicz <aobuchow@redhat.com>

--- a/modules/administration-guide/pages/configuring-storage-classes.adoc
+++ b/modules/administration-guide/pages/configuring-storage-classes.adoc
@@ -1,10 +1,10 @@
-:_content-type: CONCEPT
-:description: Installing {prod-short} using storage classes
-:keywords: administration guide, installing-che-using-storage-classes
-:navtitle: Installing {prod-short} using storage classes
-:page-aliases: installation-guide:installing-che-using-storage-classes.adoc
+:_content-type: PROCEDURE
+:description: Configuring storage classes
+:keywords: administration guide, configuring, {prod-id-short}, storage class, storage classes
+:navtitle: Configuring storage classes
+:page-aliases: installation-guide:configuring-storage-classes.adoc
 
-[id="installing-{prod-id-short}-using-storage-classes"]
+[id="configuring-storage-classes"]
 = Configuring storage classes
 
 To configure {prod-short} to use a configured infrastructure storage, install {prod-short} using storage classes. This is especially useful when you want to bind a persistent volume provided by a non-default provisioner.
@@ -18,10 +18,11 @@ To configure {prod-short} to use a configured infrastructure storage, install {p
 {prod-short} workspaces source code is stored in the persistent volume only if a workspace is not ephemeral.
 ====
 
-.Persistent volume claims facts:
+Persistent volume claims facts:
 
 * {prod-short} does not create persistent volumes in the infrastructure.
 * {prod-short} uses persistent volume claims (PVC) to mount persistent volumes.
+* The xref:devworkspace-operator.adoc[Dev Workspace operator] creates persistent volume claims.
 +
 Define a storage class name in the {prod-short} configuration to use the storage classes feature in the {prod-short} PVC.
 
