--- a/modules/overview/pages/introduction-to-eclipse-che.adoc
+++ b/modules/overview/pages/introduction-to-eclipse-che.adoc
@@ -11,7 +11,7 @@
 * A multi-container workspace for each developer with the ability to replicate with a single click using {prod} factories.
 * Pre-built stacks with the ability to create custom stacks for any language or runtime.
 * An enterprise integration using OpenShift OAuth or Dex.
-* Browser-based IDEs; integration with link:https://github.com/che-incubator/che-code[Microsoft Visual Studio Code - Open Source IDE] and other web IDEs such as link:https://github.com/che-incubator/jetbrains-editor-images[JetBrains IntelliJ IDEA Community IDE].
+* Browser-based IDEs; integration with link:https://github.com/che-incubator/che-code[Microsoft Visual Studio Code] and others such as link:https://github.com/che-incubator/jetbrains-editor-images[JetBrains IntelliJ IDEA Community Edition].
 * Support of tools protocols, such as the Language Server Protocol or Debug Adapter Protocol.
 * A plugin mechanism compatible with Visual Studio Code extensions.
 * A software development kit (SDK) for creating custom cloud developer platforms.
