Small wording change, add xref
Signed-off-by: dkwon17 <dakwon@redhat.com>

--- a/modules/end-user-guide/pages/optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc
+++ b/modules/end-user-guide/pages/optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc
@@ -15,3 +15,4 @@ When you start a new workspace, {prod-short} configures the workspace according 
 * xref:url-parameter-for-the-devfile-file-name.adoc[]
 * xref:url-parameter-for-the-devfile-file-path.adoc[]
 * xref:url-parameter-for-the-workspace-storage.adoc[]
+* xref:url-parameter-for-configuring-project-remotes.adoc[]
