--- a/modules/end-user-guide/pages/url-parameter-for-configuring-project-remotes.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-configuring-project-remotes.adoc
@@ -7,7 +7,7 @@
 [id="url-parameter-for-configuring-project-remotes"]
 = URL parameter for configuring project remotes
 
-When you open a URL to start a new workspace, one Git remote will be configured automatically. Additional Git remotes can then be configured on the command line after workspace startup, or by editing the {devworkspace} {orch-name} resource for the new workspace after its creation. 
+When you open a URL to start a new workspace, the origin remote will be configured automatically. Additional Git remotes can be configured on the command line after workspace startup, or by editing the {devworkspace} {orch-name} resource for the new workspace after its creation. 
 
 To have {prod-short} automatically configure Git remotes on workspace creation, the `remotes=<remotes>` URL parameter can be used.
 
