--- a/modules/end-user-guide/pages/url-parameter-for-configuring-project-remotes.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-configuring-project-remotes.adoc
@@ -21,7 +21,7 @@ Remote names and URLs can be specified by providing a list of `{name,URL}` pairs
 
 [source,subs="+quotes,+attributes,+macros"]
 ----
-{{origin,https://git-url/origin/project.git},{upstream,https://git-url/upstream/project.git}, ... } <1>
+{{origin,https://git-url/origin/project.git},{upstream,https://git-url/upstream/project.git}, ... }
 ----
 
 The following example configures two remotes on workspace creation, `origin` and `upstream`. The `origin` remote's default branch is checked out on workspace startup.
