--- a/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
@@ -23,7 +23,7 @@ spec:
 ====
 * The default `openVSXURL` value is `pass:c,a,q[https://open-vsx.org]`.
  
-* To select the embedded Open VSX registry instance in the `plugin-registry` pod, use `openVSXURL: ''`.
+* To select the embedded Open VSX registry instance in the `plugin-registry` pod, use `openVSXURL: ''`. See the next section for how to customize the included extensions.
 
-* You can point `openVSXURL` at the URL of your customized Open VSX registry. See the next section for how to configure and build it.
+* You can point `openVSXURL` at the URL of a standalone Open VSX registry instance. 
 ====
