--- a/modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -45,7 +45,7 @@ The latest extension version on link:https://open-vsx.org[open-vsx.org] is the d
 ----
 ====
 +
-WARNING: The link:https://aka.ms/vsmarketplace-ToU[Microsoft Visual Studio Marketplace Terms of Use] do not permit downloading extensions from link:https://marketplace.visualstudio.com/VSCode[Microsoft Visual Studio Marketplace] for use in Microsoft Visual Studio Code - Open Source that is loaded in your organization's workspaces.
+NOTE: Please read the link:https://aka.ms/vsmarketplace-ToU[Terms of Use] for the link:https://marketplace.visualstudio.com/VSCode[Microsoft Visual Studio Marketplace] before using its resources.
 
 ** You can remove the extension by deleting it from the `openvsx-sync.json` file.
 
