adding a vale pass-through

--- a/modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-vscode-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -7,7 +7,11 @@ You can add or remove your choice of pass:[<!-- vale RedHat.Spelling = NO -->] p
 
 This will create a custom build of the Open VSX registry, which can be used in your organization’s workspaces. 
 
-TIP: To get the latest security fixes and updates after a {prod-short} update, you can build a new registry container that is based on the updated {prod-short} container.
+pass:[<!-- vale RedHat.TermsErrors = NO -->]
+
+TIP: To get the latest security fixes after a {prod-short} update, rebuild your container based on the latest tag or SHA.
+
+pass:[<!-- vale RedHat.TermsErrors = YES -->]
 
 .Procedure
 
